Actions
Bug #11455
closedmdb: libfksmbfs NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../../common/modules/smbfs/smbfs.c: In function 'vfs_walk_init': ../../../common/modules/smbfs/smbfs.c:284:21: error: comparison between pointer and integer [-Werror] if (wsp->walk_addr == NULL && ^~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7b64dea37f86f82e3b7fc0f52918a46d5567ac8e
commit 7b64dea37f86f82e3b7fc0f52918a46d5567ac8e Author: Toomas Soome <tsoome@me.com> Date: 2019-07-31T06:54:16.000Z 11455 mdb: libfksmbfs NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions